# mandelbrotZoom

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  compile.cmd  example-input.txt  fractal.f90  test.sh
.github/workflows/: main.yml
inputs/: example-0.txt  example-1.txt
inputs/expected-output/: example-0_10.ppm  example-0_2.ppm  example-1_10.ppm  example-1_2.ppm
pnmio/: CMakeLists.txt  pnmio.f90
